compiler.old/tests/compiler/must_fail/t_19.rs.exp.err
tests/compiler/must_fail/t_19.rs:12:13: 12:14 error: wrong storage type for call of bar: got ``stack!'', expected ``reg!''
        bar(x);
            ^^
